// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should match snapshot hidden 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.75rem;
  padding-right: 0.5rem;
  color: #FFFFFF;
  background: hsla(222, 63%, 43%, 1);
}

.emotion-3:disabled {
  background: hsla(0, 0%, 87%, 1);
  color: hsla(0, 0%, 45%, 1);
}

.emotion-3:hover {
  color: #FFFFFF;
  background: hsla(222, 63%, 34%, 1);
}

.emotion-3:active {
  color: #FFFFFF;
  background: hsla(222, 63%, 25%, 1);
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-13 {
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: coral;
  padding: 0.75rem;
  min-width: 18px;
  border: 1px solid hsla(0, 0%, 87%, 1);
  border-radius: 3px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background: transparent;
  color: hsla(222, 63%, 43%, 1);
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-5:hover {
  color: hsla(222, 63%, 43%, 1);
  background: hsla(222, 62%, 96%, 1);
}

.emotion-5:active {
  color: hsla(222, 63%, 43%, 1);
  background: hsla(222, 62%, 92%, 1);
}

.emotion-5:disabled {
  color: hsla(0, 0%, 45%, 1);
  background: hsla(0, 0%, 87%, 1);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-bottom: 1px solid hsla(0, 0%, 87%, 1);
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 14L12 10L8 14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
           Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      hidden=""
      id="id"
      role="menu"
      style="display: none;"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu should match snapshot visible 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.75rem;
  padding-right: 0.5rem;
  color: #FFFFFF;
  background: hsla(222, 63%, 43%, 1);
}

.emotion-3:disabled {
  background: hsla(0, 0%, 87%, 1);
  color: hsla(0, 0%, 45%, 1);
}

.emotion-3:hover {
  color: #FFFFFF;
  background: hsla(222, 63%, 34%, 1);
}

.emotion-3:active {
  color: #FFFFFF;
  background: hsla(222, 63%, 25%, 1);
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background: transparent;
  color: hsla(222, 63%, 43%, 1);
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-5:hover {
  color: hsla(222, 63%, 43%, 1);
  background: hsla(222, 62%, 96%, 1);
}

.emotion-5:active {
  color: hsla(222, 63%, 43%, 1);
  background: hsla(222, 62%, 92%, 1);
}

.emotion-5:disabled {
  color: hsla(0, 0%, 45%, 1);
  background: hsla(0, 0%, 87%, 1);
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-bottom: 1px solid hsla(0, 0%, 87%, 1);
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

.emotion-13 {
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background: #FFFFFF;
  padding: 0.75rem;
  min-width: 18px;
  border: 1px solid hsla(0, 0%, 87%, 1);
  border-radius: 3px;
  box-shadow: 0rem 0rem 1rem 0rem rgba(0,0,0,0.10);
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="true"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 14L12 10L8 14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
           Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      id="id"
      role="menu"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
